# Image-Dataset-Builder

./: .env  .gitignore  DataPipeline.bat  README.md  pyproject.toml  requirements.txt
src/: DataCleaner.py  DatasetCreator.py  DatasetViewer.py  ImageDownloader.py  ImageSelector.py  LabelEditor.py  MetadataCreator.py  MoveFiles.py  Snakefile  keywords.txt  selectors.json
